--- a/digibeebi/package.json
+++ b/digibeebi/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.3.3",
+    "font-picker-react": "^3.5.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.2",
     "react-color": "^2.19.3",
@@ -16,7 +17,7 @@
     "react-dom": "^18.2.0",
     "react-pageflip": "^2.0.3",
     "react-router-dom": "^6.22.3",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
