--- a/beebiraamat/package.json
+++ b/beebiraamat/package.json
@@ -8,6 +8,8 @@
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.2.0",
     "react-color": "^2.19.3",
+    "react-date-picker": "^10.6.0",
+    "react-datepicker": "^6.7.1",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-pageflip": "^2.0.3",
